# qpp

./: .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  Doxyfile  README  README.md  df  kolia  log  mklog
examples/geom/: CMakeLists.txt  aux_rtree_ex1.cpp  cls_pot.cpp  geom1.cpp  geom2.cpp  geom3.cpp  geom6.cpp  geom_oh.cpp  ngbr.cpp  ngbr.py  reorder.cpp  shape.cpp  si-ngbr.cpp  vec.cpp  xgeom.cpp  xgeom1.cpp
examples/geom_examples/: 1.xuz  1.xyz  2.xyz  2.xyz~  21.xyz  21.xyz~  3.xyz  4.xyz  CMakeLists.txt  CMakeLists.txt~  c2h6.xyz  example.qpp  example.qpp~  example1.qpp  g5.xyz  g7.xyz  geom-xtr.cpp  geom1  geom1-mol.cpp  geom1.cpp  geom2  geom2.cpp  geom3  geom3.cpp  geom31.cpp  geom4.cpp  geom41.cpp  geom5.cpp  geom6.cpp  geom6.out  geom7.cpp  geom8.cpp  geomstat.cpp  molvec.cpp  repl.cpp  shape.cpp  surfplicator.cpp  symplicator.cpp  triangul.cpp  zmt.cpp
examples/io_examples/: CMakeLists.txt  azobenzene.qpp  example.qpp  io0.cpp  io1.cpp  io2.cpp  meta.cpp  meta1.cpp  molecule.cpp  optedit.cpp  parmcheck.cpp  parmread.cpp  pzt.qpp  split.cpp  structs.cpp  templates.qpp  tok.cpp  z-carbon.qpp
examples/lace_examples/: CMakeLists.txt  blas1.cpp  blas2.cpp  blas3.cpp  blas4.cpp  blas5.cpp  herm_element.cpp  lace1.cpp  lace2.cpp  wizard1.cpp  wizard2.cpp  wizard3.cpp
examples/symm/: CMakeLists.txt  autosymm1.cpp  autosymm2.cpp  build_point_group.cpp  cbc_crystal.cpp  chartab.cpp  find_point_group.cpp  fps_tests.cpp  lattice_point_group.cpp  livecs.cpp  ntuc.cpp  permut.cpp  spgtest.cpp  subsp.cpp  symm.cpp  symm_oh.cpp
examples/zpattern/: CMakeLists.txt  a-quartz.uc  ex1.cpp  ex2.cpp  fullerene.cpp  fullerene2.cpp  g.xyz  graphene.cpp  gulp_script  head  q.xyz  qq.xyz  silicon.cpp  tor-symm.cpp  tor.cpp  tor.xyz  tor2.cpp  zdebug.cpp  zread.cpp  zsrch.cpp
modules/: CMakeLists.txt  README.md  constants.hpp  consts.hpp  physconst.hpp  specfunc.cpp
modules/basis/: basis.cpp  basis.hpp  ecp.hpp  shell.hpp
modules/classic/: potentials.hpp
modules/compute/: compute_driver.hpp  compute_instance.hpp  epotnuc.hpp  rdf.hpp
modules/data/: atom.hpp  case_icomp.hpp  color.hpp  compiler_fallback.hpp  data.cpp  data.hpp  errors.cpp  errors.hpp  generic_array.hpp  globals.cpp  globals.hpp  make_unique.hpp  meta.cpp  meta.hpp  molecule.hpp  ptable.cpp  ptable.hpp  qppdata.cpp  qppdata.hpp  scalar_volume.hpp  symmetric_key.hpp  types.cpp  types.hpp
modules/geom/: #9.c++#  #geom.hpp#  .#geom.hpp  1  1.c++  1.gin  10.c++~  11.c++  11.c++~  12.c++  2  2.c++  3  3.c++  4  4.c++  5  5.c++  6  7.c++  a.out  aabb.hpp  atom-test.c++  atom.hpp  atom.hpp~  aux_rtree.hpp  basic_geom.hpp  builders.hpp  extents_observer.hpp  geom-test.c++  geom-vardim.hpp  geom.hpp  geom.hpp.old1~  geom.hpp~  geom3  geom_anim.hpp  geom_extras.hpp  geomanip.hpp  lace3d.hpp  manyfold.hpp  (+12 more)
modules/instr/: builders.hpp  geomanip.hpp  shape.hpp
modules/io/: #1.c++#  1  2.c++  3.c++  4.c++  5.c++  a.out  adme.hpp  ccd_cp2k.hpp  ccd_firefly.hpp  ccd_hoomd_xml.hpp  ccd_molden.hpp  ccd_orca.hpp  ccd_programs.hpp  ccd_xyz.hpp  comp_chem_data.hpp  compile.cpp  compile.hpp  cp2k.hpp  cp2k_pdos.hpp  cube.hpp  example.qpp  firefly.hpp  general_qc_output.hpp  geomio.cpp  geomio.hpp  geomio.py.cpp  gms_io.hpp  gmsio.hpp  gmsio.py.cpp  gulp_io.hpp  io.hpp  io.py.cpp  io.py.hpp  molcas.hpp  molio.hpp  parsing_exceptions.hpp  pdb_name_reducer.hpp  pdos.hpp  qpparser.cpp  (+9 more)
modules/lace/: #blas_mtr.hpp#  CMakeLists.txt  Makefile  blas-mkl.cpp  blas.hpp  blas_mtr.hpp  blas_mv.hpp  blas_vtr.hpp  calcul.hpp  calculator.hpp  complex.hpp  complex.hpp~  cubeq.c++  cubeq.c++~  engine.hpp  engine1.hpp  expressions.hpp  globals.hpp  lace.cpp  lace.hpp  lace3d.hpp  lace3d.hpp~  lapack-mkl.cpp  matrix.hpp  matrix_expressions.hpp  prnmv.hpp  shape.cpp  shape.hpp  storage.hpp  tree.hpp  vector.hpp  vector_expressions.hpp  wizard.hpp  wizard_instance.hpp
modules/lace-2010/: blas-mkl.cpp  calculator.hpp  complex_repeater.hpp  complex_repeater.hpp~  engine.hpp  lace.cpp  matrix.hpp
modules/lace-2012/: CMakeLists.txt  a.out  blas.hpp  calculator.hpp  complex.hpp  element.hpp  engine.hpp  expressions.hpp  globals.hpp  lace.cpp  lace.hpp  lace3d.hpp  lapack.hpp  matrix.hpp  matrix_expressions.hpp  range.hpp  storage.hpp  tree.hpp  vector.hpp  vector_expressions.hpp  wizard.hpp  wizard_instance.hpp
modules/mathf/: CMakeLists.txt  gaussian.cpp  gaussian.hpp  intlst.cpp  intlst.hpp  math.hpp  specfunc.cpp  specfunc.hpp  testf.cpp  testf.hpp
modules/pyqpp/: autosymm.py  aux.py  example.py  iovasp.py  ioxyz.py  nice.py  py_indexed_property.hpp  pyqpp.cpp  pyqpp.hpp  pyqpp_atable.cpp  pyqpp_autosymm.cpp  pyqpp_basis_ecp.cpp  pyqpp_builders.cpp  pyqpp_ccd.cpp  pyqpp_cell.cpp  pyqpp_experimental.cpp  pyqpp_geom.cpp  pyqpp_gmsio.cpp  pyqpp_io.cpp  pyqpp_linalg.cpp  pyqpp_math.cpp  pyqpp_molecule.cpp  pyqpp_neighbours.cpp  pyqpp_opaque_types.cpp  pyqpp_ptable.cpp  pyqpp_shape.cpp  pyqpp_xgeom.cpp  qpp.py  qpp1.py  symm.py
modules/python/: autosymm.py  ioxyz.py  qpp.py  qppcpp.hpp  qppcpp1.cpp  qppcpp10.cpp  qppcpp2.cpp  qppcpp3.cpp  qppcpp4.cpp  qppcpp5.cpp  qppcpp6.cpp  qppcpp7.cpp  qppcpp8.cpp  qppcpp9.cpp  qppython.cpp  qppython.hpp  symm.py
modules/qc/: 1body.hpp  basis.hpp  cinstance.hpp  epotnuc.hpp  hf.hpp  mtable.hpp
modules/qm/: misc.hpp
modules/symm/: 1  1.dvi  1.tex~  2.dvi  2.tex  2.tex~  3.c++~  4.c++~  5.c++  5.c++~  7.c++  7.c++~  T.tex  T.tex~  Td.tex  Td.tex~  autosymm.hpp  cell.hpp  gcell.hpp  gen_cell.hpp  group_theory.hpp  groups.hpp  index.cpp  index.hpp  index_set.hpp  multab.c++~  permut.hpp  point_groups.hpp  shenflis.hpp~  shoenflis.hpp  spgw.hpp  subspace.hpp  symm.hpp  symm.hpp~  symm_calc.c++  td-c3v.tex~  transform.hpp
tests/: CMakeLists.txt  catch.hpp  run_tests.cpp  test-lace3d.cpp  test_ccd.cpp  test_compute.cpp  test_geom.cpp  test_lace3d.cpp  test_symmetry.cpp  test_tws_tree.cpp  tests.cpp
utils/: #gbulk.cpp#  CMakeLists.txt  CMakeLists.txt~  gb.cpp  gboundary.cpp  gbulk.cpp  gmon.out  mkuc.cpp  multipole.cpp  phase_match.cpp  qrun.cpp  stochiom.cpp  zbuilder.cpp  ztrainer.cpp
(+1070 files in other folders)
