#add_executable(zbuilder zbuilder.cpp)
#target_link_libraries(zbuilder qpp)

#add_executable(ztrainer ztrainer.cpp)
#target_link_libraries(ztrainer qpp)

add_executable(gboundary gboundary.cpp)
target_link_libraries(gboundary qpp)

add_executable(gbulk gbulk.cpp)
target_link_libraries(gbulk qpp)

add_executable(stochiom stochiom.cpp)
target_link_libraries(stochiom qpp)

add_executable(phase_match phase_match.cpp)
target_link_libraries(phase_match qpp)

#add_executable(tmp1 tmp1.cpp)
#target_link_libraries(tmp1 qpp)
