project(geom_examples)

#add_executable(geom1 geom1.cpp)

add_executable(geom2 geom2.cpp)

add_executable(geom3 geom3.cpp)

add_executable(geom31 geom31.cpp)

#add_executable(geom4 geom4.cpp)

#add_executable(geom41 geom41.cpp)

#add_executable(geom5 geom5.cpp)
#target_link_libraries(geom5 lace)

add_executable(geom6 geom6.cpp)

add_executable(geomstat geomstat.cpp)
#target_link_libraries(geom6 lace)

#add_executable(zmt zmt.cpp)
#target_link_libraries(zmt lace)

#add_executable(geom7 geom7.cpp)
#target_link_libraries(geom7 lace)

add_executable(geom-xtr geom-xtr.cpp)
#target_link_libraries(geom8 lace)

add_executable(molvec molvec.cpp)

add_executable(symplicator symplicator.cpp)

add_executable(surfplicator surfplicator.cpp)
