add_executable(index index.cpp)
add_executable(index1 index1.cpp)
target_link_libraries(index1 qpp)

add_executable(symm symm.cpp)
add_executable(symm_oh symm_oh.cpp)
#add_executable(cbc_crystal cbc_crystal.cpp)
add_executable(cell cell.cpp)
add_executable(rotrans rotrans.cpp)
add_executable(chartab chartab.cpp)
add_executable(permut permut.cpp)

if(USE_SPGLIB)
    add_executable(spgtest spgtest.cpp)
    target_link_libraries(spgtest spglib-imp qpp)
endif(USE_SPGLIB)
add_executable(autosymm1 autosymm1.cpp)
target_link_libraries(autosymm1 qpp)

add_executable(autosymm2 autosymm2.cpp)
target_link_libraries(autosymm2 qpp)
